# zxcs_db

./: .gitignore  README.md  config.template.yaml  pyproject.toml
scripts/: init.sql
zxcs_db/: __init__.py  app.py  error.py  main.py
zxcs_db/api/: deps.py
zxcs_db/api/v1/: __init__.py  book_info.py  book_kind.py  demo.py
zxcs_db/config/: __init__.py  log.py  options.py  settings.py  yamlconfig.py
zxcs_db/cores/: demo.py
zxcs_db/crud/: __init__.py  base.py  book_info.py  book_kind.py  demo.py
zxcs_db/db/: __init__.py  base_class.py  init_db.py  redis.py  session.py
zxcs_db/lib/: utils.py
zxcs_db/models/: book_info.py  book_kind.py  demo.py
zxcs_db/schemas/: base.py  book_info.py  book_kind.py  demo.py  resp.py
